--- a/team.html
+++ b/team.html
@@ -121,6 +121,14 @@
                 </div>
             </div>
             <div class="team-member">
+                <img src="./photos/Jhoon_Kim.png" alt="Jhoon Kim">
+                <div class="info">
+                    <h4>Jhoon Kim</h4>
+                    <h5>Professor, Yonsei Lee Youn Jae Fellow</h5>   
+                    <p>Yonsei University</p>
+                </div>
+            </div>
+            <div class="team-member">
                 <img src="./photos/Lin_Sun.jpg" alt="Lin Sun">
                 <div class="info">
                     <h4>Lin Sun</h4>
